# mymq

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  config.toml
.github/workflows/: rust.yml
docs/: corrl.rs  faq.md  refs.md  tooling.md
examples/: read_penalty.rs
src/: .lib.rs.swp  chash.rs  chash_test.rs  client.rs  clientid.rs  cluster.rs  config.rs  crc.rs  crc_test.rs  error.rs  flush.rs  fuzzy.rs  handshake.rs  keep_alive.rs  lib.rs  lib_test.rs  listener.rs  message.rs  miot.rs  packet.rs  protocol.rs  queue.rs  rebalance.rs  rebalance_test.rs  session.rs  shard.rs  socket.rs  spinlock.rs  thread.rs  tick.rs  ticker.rs  timer.rs  topic.rs  trace.rs  ttrie.rs  types.rs  util.rs  util_test.rs
src/broker/: chash.rs  chash_test.rs  cluster.rs  config.rs  consensus.rs  crc.rs  design.rs  flush.rs  handshake.rs  keep_alive.rs  listener.rs  message.rs  miot.rs  mod.rs  queue.rs  rebalance.rs  rebalance_test.rs  rr.rs  session.rs  shard.rs  socket.rs  spinlock.rs  thread.rs  ticker.rs  ttrie.rs
src/netw/: mod.rs
src/v5/: .mod.rs.swp  .mod_test.rs.swp  TODO.md  auth.rs  client.rs  config.rs  connack.rs  connect.rs  disconnect.rs  fuzzy.rs  mod.rs  mod_fuzzy.rs  mod_test.rs  packet.rs  ping.rs  protocol.rs  pubaclc.rs  publish.rs  sub.rs  suback.rs  subscribe.rs  types.rs  types_arbitrary.rs  unsub.rs  unsuback.rs  unsubscribe.rs  v5.rs
