[package]
name = "mqtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = { version = "0.8.5", features = ["std_rng"] }
uuid = { version = "1.1.2", features = ["v4"] }

arbitrary = { version = "1.1.0", features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = { version = "1.1.0", features = ["derive"] }

[features]
backtrace = []
fuzzy = ["arbitrary"]
