[package]
name = "mqtr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mqcl"
required-features = ["mqcl"]

[[bin]]
name = "play"
required-features = ["play"]

[dependencies]
log = "0.4.17"
rand = { version = "0.8.5", features = ["std_rng"] }
uuid = { version = "1.1.2", features = ["v4"] }
num_cpus = "1.13.1"
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
chrono = "0.4.19"
mio = { version = "0.8.4", features = ["os-poll", "net"] }

arbitrary = { version = "1.1.0", features = ["derive"], optional = true }
structopt = { version = "0.3.26", default-features = false, optional = true }
env_logger = { version = "0.9", optional = true }

[dev-dependencies]
arbitrary = { version = "1.1.0", features = ["derive"] }

[features]
backtrace = []
fuzzy = ["arbitrary"]
mqcl = ["structopt", "env_logger"]
play = ["structopt", "env_logger"]
