[package]
name = "mymq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mqttd"
required-features = ["mqttd"]

[[bin]]
name = "play"
required-features = ["play"]

[dependencies]
# TODO: split the dependency between "broker" and "client" features.
log = "0.4.17"
uuid = { version = "1.1.2", features = ["v4"] }
num_cpus = "1.13.1"
toml = "0.5.9"
cityhash-rs = "1.0.0"
mio = { version = "0.8.4", features = ["os-poll", "net"] }

arbitrary = { version = "1.1.0", features = ["derive"], optional = true }
structopt = { version = "0.3.26", default-features = false, optional = true }
env_logger = { version = "0.9", optional = true }
chrono = { version = "0.4.19", optional = true}
ctrlc = { version = "3.2.2", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
arbitrary = { version = "1.1.0", features = ["derive"] }
rayon = "1.5.3"

[features]
default = ["broker", "client"]

backtrace = []
client = []
broker = ["client"]
fuzzy = ["arbitrary"]

mqttd = ["structopt", "env_logger", "chrono", "ctrlc"]
play = ["structopt", "env_logger"]
